kubernetes/cluster/active/apps/yuvomi/overlays/prod/resources/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: yuvomi
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Family and household planner.
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: sh-yuvomi.svg
    gethomepage.dev/name: Yuvomi
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=yuvomi"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway-api
      namespace: envoy-gateway-ingress
  hostnames:
    - "household.${FQDN_01}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: yuvomi
          namespace: yuvomi
          port: 3000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
